update api documents
